[package]
name = "tutors"
version = "1.3.2"
edition = "2021"
license = "MIT"
description = "Small cli tool to make a tutors life easier"

[[bin]]
name = "tutors"
path = "src/tuto.rs"

[dependencies]
anyhow = "1.0.81"
clap = { version = "4.4.18", features = ["derive"] }
regex = "1.10.4"
walkdir = "2.5.0"
zip = { version = "0.6.6", default-features = false }
zip-extensions = "0.6.2"
csv = "1.3.0"
serde = { version = "1.0.197", features = ["derive"] }

[profile.release]
debug = false
strip = true
opt-level = 3
codegen-units = 1
lto = true
panic = 'abort'

# Learn more about generate-rpm at https://crates.io/crates/cargo-generate-rpm

[package.metadata.generate-rpm]
assets = [
	{ source = "target/release/tutors", dest = "/usr/bin/tutors", mode = "755" },	
]
